{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 193,
  "lineage": "85e9df47-7788-c0c7-6196-34be6b5b149c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e885a6dfa32d4fd",
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:elastic-ip/eipalloc-07e885a6dfa32d4fd",
            "association_id": "eipassoc-029e776e30e0e85b3",
            "domain": "vpc",
            "id": "eipalloc-07e885a6dfa32d4fd",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-08afd6def0f39c6d5",
            "private_dns": "ip-172-31-17-9.ap-northeast-1.compute.internal",
            "private_ip": "172.31.17.9",
            "public_dns": "ec2-54-65-121-182.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.65.121.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iac2026-keiichi-hayama-nat-eip"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-nat-eip",
              "Training": "iac2026"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034f738eade1b2e66",
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:instance/i-0bbeacacf98b1561d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iac2026-keiichi-hayama-profile-web",
            "id": "i-0bbeacacf98b1561d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc20b975b0c2d20b",
            "private_dns": "ip-172-31-17-39.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Createdby": "keiichi-hayama",
                  "Training": "iac2026"
                },
                "throughput": 125,
                "volume_id": "vol-05a34330f260f316e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a14b0480c8d740d",
            "tags": {
              "Name": "iac2026-keiichi-hayama-web-1"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-web-1",
              "Training": "iac2026"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01234e3df2d50ee53"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_1",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034f738eade1b2e66",
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:instance/i-070f3c0a7f74dc8e1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iac2026-keiichi-hayama-profile-web",
            "id": "i-070f3c0a7f74dc8e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b17db1df220ae934",
            "private_dns": "ip-172-31-17-59.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Createdby": "keiichi-hayama",
                  "Training": "iac2026"
                },
                "throughput": 125,
                "volume_id": "vol-02756aba08ff68275",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bed5839619ba335d",
            "tags": {
              "Name": "iac2026-keiichi-hayama-web-2"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-web-2",
              "Training": "iac2026"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01234e3df2d50ee53"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:internet-gateway/igw-043a061639a747724",
            "id": "igw-043a061639a747724",
            "owner_id": "859456358496",
            "tags": {
              "Name": "iac2026-keiichi-hayama-igw"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-igw",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:loadbalancer/app/iac2026-keiichi-hayama-alb/f58ec733510dadac",
            "arn_suffix": "app/iac2026-keiichi-hayama-alb/f58ec733510dadac",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-iac2026-keiichi-hayama-alb-29479158.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:loadbalancer/app/iac2026-keiichi-hayama-alb/f58ec733510dadac",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "iac2026-keiichi-hayama-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c391161905e8e774"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a14b0480c8d740d"
              },
              {
                "subnet_id": "subnet-0bed5839619ba335d"
              }
            ],
            "subnets": [
              "subnet-01a14b0480c8d740d",
              "subnet-0bed5839619ba335d"
            ],
            "tags": {
              "Name": "iac2026-keiichi-hayama-alb"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-alb",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.private_app_1",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:listener/app/iac2026-keiichi-hayama-alb/f58ec733510dadac/2a3407bbb70dc7fd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:listener/app/iac2026-keiichi-hayama-alb/f58ec733510dadac/2a3407bbb70dc7fd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:loadbalancer/app/iac2026-keiichi-hayama-alb/f58ec733510dadac",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Training": "iac2026"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.internal",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.private_app_1",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326",
            "arn_suffix": "targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:loadbalancer/app/iac2026-keiichi-hayama-alb/f58ec733510dadac"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "iac2026-keiichi-hayama-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "iac2026-keiichi-hayama-tg"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-tg",
              "Training": "iac2026"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326-20260129233258605900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326",
            "target_id": "i-0bbeacacf98b1561d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_instance.web1",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_1",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326-20260129233318703700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:859456358496:targetgroup/iac2026-keiichi-hayama-tg/db2a03020150d326",
            "target_id": "i-070f3c0a7f74dc8e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.web",
            "aws_iam_role.web",
            "aws_instance.web2",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_subnet.private_app_2",
            "aws_vpc.this",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e885a6dfa32d4fd",
            "association_id": "eipassoc-029e776e30e0e85b3",
            "connectivity_type": "public",
            "id": "nat-0e9a33c1cd5bce877",
            "network_interface_id": "eni-08afd6def0f39c6d5",
            "private_ip": "172.31.17.9",
            "public_ip": "54.65.121.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0baba1d701401ecc1",
            "tags": {
              "Name": "iac2026-keiichi-hayama-natgw"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-natgw",
              "Training": "iac2026"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:route-table/rtb-0141240a020e63d9c",
            "id": "rtb-0141240a020e63d9c",
            "owner_id": "859456358496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e9a33c1cd5bce877",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac2026-keiichi-hayama-rt-private"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-rt-private",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:route-table/rtb-01e63826023960245",
            "id": "rtb-01e63826023960245",
            "owner_id": "859456358496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043a061639a747724",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac2026-keiichi-hayama-rt-public"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-rt-public",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d398457c7f6fa4a0",
            "route_table_id": "rtb-0141240a020e63d9c",
            "subnet_id": "subnet-01a14b0480c8d740d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app_1",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005dc632823e5b343",
            "route_table_id": "rtb-0141240a020e63d9c",
            "subnet_id": "subnet-0bed5839619ba335d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app_2",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046a364a43500a3bf",
            "route_table_id": "rtb-0141240a020e63d9c",
            "subnet_id": "subnet-0e79015e10f869ac0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_db_1",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01490660f9acdd0de",
            "route_table_id": "rtb-0141240a020e63d9c",
            "subnet_id": "subnet-01208eaaedfd19d10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_db_2",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c747165a6a9d22cd",
            "route_table_id": "rtb-01e63826023960245",
            "subnet_id": "subnet-0baba1d701401ecc1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a7b1cfdc3e3c6e3",
            "route_table_id": "rtb-01e63826023960245",
            "subnet_id": "subnet-0a1f6adafe78f3ed0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:security-group/sg-0c391161905e8e774",
            "description": "Internal ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c391161905e8e774",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.17.0/24"
                ],
                "description": "HTTP from allowed CIDR",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iac2026-keiichi-hayama-sg-alb",
            "name_prefix": "",
            "owner_id": "859456358496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac2026-keiichi-hayama-sg-alb"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-sg-alb",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:security-group/sg-06a153921fba95fc5",
            "description": "RDS SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a153921fba95fc5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from web",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01234e3df2d50ee53"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "iac2026-keiichi-hayama-sg-rds",
            "name_prefix": "",
            "owner_id": "859456358496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac2026-keiichi-hayama-sg-rds"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-sg-rds",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:security-group/sg-01234e3df2d50ee53",
            "description": "Web EC2 SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01234e3df2d50ee53",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c391161905e8e774"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iac2026-keiichi-hayama-sg-web",
            "name_prefix": "",
            "owner_id": "859456358496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac2026-keiichi-hayama-sg-web"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-sg-web",
              "Training": "iac2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-01a14b0480c8d740d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.17.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a14b0480c8d740d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-keiichi-hayama-private-app-1"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-private-app-1",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-0bed5839619ba335d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.17.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed5839619ba335d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-keiichi-hayama-private-app-2"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-private-app-2",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-0e79015e10f869ac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.17.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e79015e10f869ac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-keiichi-hayama-private-db-1"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-private-db-1",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-01208eaaedfd19d10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.17.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01208eaaedfd19d10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-keiichi-hayama-private-db-2"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-private-db-2",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-0baba1d701401ecc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.31.17.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baba1d701401ecc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-keiichi-hayama-public-1"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-public-1",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:subnet/subnet-0a1f6adafe78f3ed0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.31.17.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1f6adafe78f3ed0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859456358496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iac2026-keiichi-hayama-public-2"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-public-2",
              "Training": "iac2026"
            },
            "vpc_id": "vpc-0cf7c8018775458d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:859456358496:vpc/vpc-0cf7c8018775458d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.17.0/24",
            "default_network_acl_id": "acl-0dde5ce1be6ea009b",
            "default_route_table_id": "rtb-0a924af3807bbf0b9",
            "default_security_group_id": "sg-0b39c73b1106a5455",
            "dhcp_options_id": "dopt-0576f3920bcd0bfc2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf7c8018775458d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a924af3807bbf0b9",
            "owner_id": "859456358496",
            "tags": {
              "Name": "iac2026-keiichi-hayama-vpc"
            },
            "tags_all": {
              "Createdby": "keiichi-hayama",
              "Name": "iac2026-keiichi-hayama-vpc",
              "Training": "iac2026"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}